--- a/nftdao/src/App.css
+++ b/nftdao/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   text-align: center;
 }
@@ -36,4 +35,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+#threedcomp {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+}
+#remainingapp {
+  position: relative;
+  z-index: 2;
 }
