--- a/nftdao/src/components/shared/ProposalCard/ProposalCard.css
+++ b/nftdao/src/components/shared/ProposalCard/ProposalCard.css
@@ -1,6 +1,8 @@
 .proposalList{
-    border-style: dotted; 
-    margin: 0px 400px 30px 400px;
+    border-radius: 20px;
+    margin: 70px 400px;
+    padding: 10px 0px;
+    background: radial-gradient(circle at 7.5% 24%, rgb(237, 161, 193) 0%, rgb(250, 178, 172) 25.5%, rgb(190, 228, 210) 62.3%, rgb(215, 248, 247) 93.8%);
 }
 
 .proposalCard{
@@ -8,7 +10,7 @@
 }
 
 .proposalCard div{
-    margin-top: 20px;
+    margin: 20px;
 }
 
 .proposalCard img{
@@ -24,4 +26,5 @@
     background-color: red;
     border-radius: 10px;
     margin-left: 20px;
+    padding: 3px;
 }
