--- a/nftdao/src/components/pages/treasuryPage.css
+++ b/nftdao/src/components/pages/treasuryPage.css
@@ -2,11 +2,6 @@ body{
     background-color: #f5f5f5;
 }
 
-/* .mainPage{
-    height: 100vh;
-    background-color: #f5f5f5;
-} */
-
 .treasuryBox{
     width: 60vw;
     height: 20vh;
@@ -93,4 +88,75 @@ body{
     margin: 20vh 0 0 40vw;
     border-radius: 5vh;
     cursor: pointer;
+}
+
+.formTitle {
+    margin: 150px 100px 50px 500px;
+}
+
+.formTitle h1 {
+    color: #fff;
+    font-size: 50px;
+    font-weight: bold;
+    font-family: monospace;
+    letter-spacing: 7px;
+    cursor: pointer;
+  }
+  
+  .formTitle  h1 span {
+    transition: 0.5s ease-out;
+  }
+  .formTitle h1:hover span:nth-child(1) {
+    margin-right: 5px;
+  }
+  .formTitle h1:hover span:nth-child(1):after {
+    content: "'";
+  }
+  .formTitle h1:hover span:nth-child(2) {
+    margin-left: 30px;
+  }
+  .formTitle h1:hover span {
+    color: #fff;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff;
+  }
+
+.formTitle p {
+    font-size: 30px;
+}
+
+
+.proposal{
+    width: 500px;
+    margin: 40px 20px 0 20px;
+    padding: 50px; 
+    background: radial-gradient(circle at 10% 20%, rgb(222, 168, 248) 0%, rgb(168, 222, 248) 21.8%, rgb(189, 250, 205) 35.6%, rgb(243, 250, 189) 52.9%, rgb(250, 227, 189) 66.8%, rgb(248, 172, 172) 90%, rgb(254, 211, 252) 99.7%);
+    border-radius: 20px;
+}
+
+.proposal:hover{
+    background: linear-gradient(111.1deg, rgb(251, 140, 0) 3.2%, rgb(98, 0, 234) 90.3%);
+}
+
+.formProposal label {
+    font-size: 15px;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.formProposal textarea {
+    border-radius: 10px;
+    width: 410px;
+    border-color: #2d2d2d;
+}
+.detailsBox{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#threedcomp{
+    /* height: 100%; */
+    width: 50%;
+    margin: 0 0 0 50vw;
 }
