--- a/nftdao/src/components/shared/Create/Create.css
+++ b/nftdao/src/components/shared/Create/Create.css
@@ -55,3 +55,14 @@
     width: 410px;
     border-color: #2d2d2d;
 }
+
+
+#threedcomp{
+  /* height: 100%; */
+  width: 50%;
+  margin: 0 0 0 50vw;
+}
+
+.createDiv{
+  display: flex;
+}
