--- a/nftdao/src/components/pages/treasuryPage.css
+++ b/nftdao/src/components/pages/treasuryPage.css
@@ -160,3 +160,18 @@ body{
     width: 50%;
     margin: 0 0 0 50vw;
 }
+
+.modalBox{
+    position: 'absolute' ;
+    top: '50%';
+    left: '50%';
+    transform: 'translate(-50%, -50%)';
+    width: 400;
+    background-color: 'background.paper';
+    border: '2px solid #000';
+    box-shadow: 24;
+}
+
+.modalText{
+    color: red !important ;
+}
