--- a/nftdao/src/components/shared/cards/tileCard.css
+++ b/nftdao/src/components/shared/cards/tileCard.css
@@ -2,7 +2,7 @@
     height: 30vh;
     /* width: 40vw; */
     background-color: #ffffff;
-    border: 1px solid rgb(152, 161, 192);
+    border: 13px solid white;
     border-radius: 5vh ;
     padding: 5vh;
     display: flex;
