--- a/nftdao/src/components/shared/ProposalCard/ProposalCard.css
+++ b/nftdao/src/components/shared/ProposalCard/ProposalCard.css
@@ -1,8 +1,12 @@
 .proposalList{
     border-radius: 20px;
-    margin: 70px 400px;
+    margin: 70px 360px;
     padding: 10px 0px;
     background: radial-gradient(circle at 7.5% 24%, rgb(237, 161, 193) 0%, rgb(250, 178, 172) 25.5%, rgb(190, 228, 210) 62.3%, rgb(215, 248, 247) 93.8%);
+}
+
+.proposalList:hover{
+    background: linear-gradient(111.1deg, rgb(251, 140, 0) 3.2%, rgb(98, 0, 234) 90.3%);
 }
 
 .proposalCard{
